grilo: port to 0.3

Current grilo version is 0.3.1. There were a few API breaks from
0.2.x to 0.3.0 which this patch addresses.

https://bugzilla.gnome.org/show_bug.cgi?id=766392