plugins/grilo/rb-grilo-source.c
@@ -524,7 +524,7 @@ make_operation_options (RBGriloSource *source, GrlSupportedOps op, int position)
 	grl_operation_options_set_count (options,
 					 CONTAINER_FETCH_SIZE);
 	grl_operation_options_set_type_filter (options, GRL_TYPE_FILTER_AUDIO);
-	grl_operation_options_set_flags (options, GRL_RESOLVE_NORMAL);
+	grl_operation_options_set_resolution_flags (options, GRL_RESOLVE_NORMAL);
 
 	return options;
 }
@@ -684,7 +684,7 @@ grilo_browse_cb (GrlSource *grilo_source, guint operation_id, GrlMedia *media, g
 		source->priv->browse_position++;
 	}
 
-	if (media && GRL_IS_MEDIA_BOX (media)) {
+	if (media && grl_media_is_container (media)) {
 
 		GtkTreeIter new_row;
 		if (source->priv->browse_container == NULL) {
@@ -724,7 +724,7 @@ grilo_browse_cb (GrlSource *grilo_source, guint operation_id, GrlMedia *media, g
 						   2, CONTAINER_MARKER,
 						   3, 0,
 						   -1);
-	} else if (media && GRL_IS_MEDIA_AUDIO (media)) {
+	} else if (media && grl_media_is_audio (media)) {
 		source->priv->browse_got_media = TRUE;
 	}
 
@@ -854,7 +854,7 @@ grilo_media_browse_cb (GrlSource *grilo_source, guint operation_id, GrlMedia *me
 		source->priv->media_browse_got_results = TRUE;
 		source->priv->media_browse_position++;
 
-		if (GRL_IS_MEDIA_AUDIO (media)) {
+		if (grl_media_is_audio (media)) {
 			RhythmDBEntry *entry;
 			entry = create_entry_for_media (source->priv->db,
 							source->priv->entry_type,
@@ -863,7 +863,7 @@ grilo_media_browse_cb (GrlSource *grilo_source, guint operation_id, GrlMedia *me
 			if (entry != NULL) {
 				rhythmdb_query_model_add_entry (source->priv->query_model, entry, -1);
 			}
-		} else if (GRL_IS_MEDIA_BOX (media)) {
+		} else if (grl_media_is_container (media)) {
 			source->priv->media_browse_got_containers = TRUE;
 		}
 	}
